--- a/src/app/quiz/components/card-question/card-question.component.css
+++ b/src/app/quiz/components/card-question/card-question.component.css
@@ -3,15 +3,15 @@
   bottom: 72%
 }
 
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) { */
 
-  /* For tablets: */
-  .image {
+/* For tablets: */
+/* .image {
     right: 38%;
-  }
-}
+  } */
+/* } */
 
-.option:hover {
+/* .option:hover {
   background: #F9A826;
   color: white !important;
 }
@@ -27,5 +27,27 @@
 
 .incorrectAnswer {
   background-color: #EA8282;
+  color: white !important;
+} */
+:host ::ng-deep .p-listbox {
+  border: none;
+}
+
+:host ::ng-deep .p-listbox-item {
+  background-color: #FFFFFF;
+  padding: 15px !important;
+  margin-bottom: 10px !important;
+  border: 2px solid #6066D0 !important;
+  border-radius: 12px !important;
+  color: #6066D0 !important;
+}
+
+:host ::ng-deep .p-listbox-item:hover {
+  background-color: #F9A826 !important;
+  color: white !important;
+}
+
+:host ::ng-deep .correct .p-listbox-item {
+  background-color: #60BF88 !important;
   color: white !important;
 }
