--- a/src/app/quiz/components/card-question/card-question.component.html
+++ b/src/app/quiz/components/card-question/card-question.component.html
@@ -1,47 +1,23 @@
 <div class="h-screen flex flex-column align-items-center justify-content-center">
-
-  <div class="w-3">
-    <h1 class="text-50 text-2xl uppercase mb-3">country quiz</h1>
-
-    <div class="h-full bg-white p-4 border-round-xl" *ngIf="allCountries.length>0">
-      <h4 class="text-left mb-3" *ngIf="questionType===0; else other">{{oneCountry.capital}} is the capital of </h4>
+  <div class="w-3 relative">
+    <h1 class="text-50 text-2xl uppercase mb-4">country quiz</h1>
+    <div class="bg-white p-4 border-round-xl" *ngIf="allCountries.length>0">
+      <img class="w-8rem absolute top-0 right-0" src="../../../../assets/images/undraw_adventure_4hum 1.svg" alt="">
+      <h4 class="text-blue-800 text-left mt-5 mb-3" *ngIf="questionType===0; else other">{{oneCountry.capital}} is the
+        capital of
+      </h4>
       <ng-template #other>
-        <div class="px-1 ">
-          <img class="w-5rem mb-2" [src]="oneCountry.flags?.svg" alt="">
-          <h4 class="text-left mb-3">Which country does this flag belong to?</h4>
+        <div>
+          <img class="mt-5 w-5rem mb-2 image" [src]="oneCountry.flags?.svg" alt="">
+          <h4 class="mt-2 text-blue-800 text-left mb-3">Which country does this flag belong to?</h4>
         </div>
       </ng-template>
-
       <p-listbox [options]="fourCountries" [(ngModel)]="optionSelected" optionLabel="name.common" class="mt-6 w-full "
-        (onChange)="selectedOption()" [disabled]="disabledOptions"></p-listbox>
-
-      <!-- <ul class="flex flex-column list-none mt-2 ">
-        <button  [(ngModel)]="option0"
-          class="text-indigo-400 border-round-sm option border-1 cursor-pointer p-3 mt-2"
-          (click)="selectedOption(fourCountries[0].cca2!)" [class.correctAnswer]="oneCountry.cca2===option0"
-          [class.incorrectAnswer]="incorrectAnswer===option0">
-          {{fourCountries[0].name!.common}}</button>
-        <button [(ngModel)]="option1"
-          class="text-indigo-400 border-round-sm option border-1 cursor-pointer p-3 mt-2"
-          (click)="selectedOption(fourCountries[1].cca2!)" [class.correctAnswer]="oneCountry.cca2===option1"
-          [class.incorrectAnswer]="incorrectAnswer===option1">
-          {{fourCountries[1].name!.common}}</button>
-        <li [(ngModel)]="option2"
-          class="text-indigo-400 border-round-sm option border-1 cursor-pointer p-3 mt-2"
-          (click)="selectedOption(fourCountries[2].cca2!)" [class.correctAnswer]="oneCountry.cca2===option2"
-          [class.incorrectAnswer]="incorrectAnswer===option2">
-          {{fourCountries[2].name!.common}}</li>
-        <li name="fieldName" ngDefaultControl [(ngModel)]="option3"
-          class="text-indigo-400 border-round-sm option border-1 cursor-pointer p-3 mt-2"
-          (click)="selectedOption(fourCountries[3].cca2!)" [class.correctAnswer]="oneCountry.cca2===option3"
-          [class.incorrectAnswer]="incorrectAnswer===option3">
-          {{fourCountries[3].name!.common}}</li>
-      </ul> -->
-
+        (onChange)="selectedOption()" [disabled]="disabledOptions">
+      </p-listbox>
       <div class="mt-5 text-right">
         <p-button label="Next" styleClass="p-button-warning" *ngIf="showButton" (click)="changeCountry()"></p-button>
       </div>
     </div>
   </div>
-
 </div>
