--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
   background-image: url('./assets/images/background.png');
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Ysabeau', sans-serif !important;
 }
