--- a/src/app/quiz/components/card-question/card-question.component.html
+++ b/src/app/quiz/components/card-question/card-question.component.html
@@ -1,7 +1,7 @@
-<div class="h-screen flex flex-column align-items-center justify-content-center">
-  <div class="w-3 relative">
+<div class="h-screen flex flex-column align-items-center justify-content-center ">
+  <div class="w-10 lg:w-3 relative">
     <h1 class="text-50 text-2xl uppercase mb-4">country quiz</h1>
-    <div class="bg-white p-4 border-round-xl" *ngIf="allCountries.length>0">
+    <div class="bg-white p-4 border-round-xl  " *ngIf="allCountries.length>0">
       <img class="w-8rem absolute top-0 right-0" src="../../../../assets/images/undraw_adventure_4hum 1.svg" alt="">
       <h4 class="text-blue-800 text-left mt-5 mb-3" *ngIf="questionType===0; else other">{{oneCountry.capital}} is the
         capital of
